--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 
 <body>
     <h1>Receceta de chivito asado</h1>
+    <br>
+    <p>No se trata solo de la simple naturaleza, sino de un saber culinario proveniente de los antepasados que datan de
+        las épocas coloniales. Cada generación le ha aportado a la fórmula su propio toque, el cual la ha ido tornando
+        en el sabroso hito gastronómico que es hoy en día.
+
+        Sin más preámbulos pasemos a la receta de nuestro plato principal, que seguramente no durará mucho tiempo en la
+        mesa familiar.</p>
+    <br>
+
     <h2>Ingredientes</h2>
     <ul>
         <li>Ajo cantidad necesaria.</li>
@@ -32,6 +41,12 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/oMtiJkZVjT4" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
+    <br>
+
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d26084341.917257078!2d-81.63269824190759!3d-37.05453362430733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1smapa%20de%20lugar%20donde%20se%20cocina%20el%20chivito%20serrano!5e0!3m2!1ses-419!2sar!4v1666703080898!5m2!1ses-419!2sar"
+            width="560" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 </body>
 
