fix-agregado de parrafo

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Receceta de chivito asado</h1>
     <br>
     <p>No se trata solo de la simple naturaleza, sino de un saber culinario proveniente de los antepasados que datan de
-        las épocas coloniales. Cada generación le ha aportado a la fórmula su propio toque, el cual la ha ido tornando
-        en el sabroso hito gastronómico que es hoy en día.
+        las épocas coloniales.<p>Cada generación le ha aportado a la fórmula su propio toque, el cual la ha ido tornando
+            en el sabroso hito gastronómico que es hoy en día.</p> 
 
         Sin más preámbulos pasemos a la receta de nuestro plato principal, que seguramente no durará mucho tiempo en la
         mesa familiar.</p>
