agregado de audio,solución de bugs y actualización de readme.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <h1>Receceta de chivito asado</h1>
     <br>
     <p>No se trata solo de la simple naturaleza, sino de un saber culinario proveniente de los antepasados que datan de
-        las épocas coloniales.
+        las épocas coloniales.</p>
     <p>Cada generación le ha aportado a la fórmula su propio toque, el cual la ha ido tornando
         en el sabroso hito gastronómico que es hoy en día.</p>
 
-    Sin más preámbulos pasemos a la receta de nuestro plato principal, que seguramente no durará mucho tiempo en la
-    mesa familiar.</p>
+    <p>Sin  más preámbulos pasemos a la receta de nuestro plato principal, que seguramente no durará mucho tiempo en la
+        mesa familiar.</p>
     <br>
 
     <h2>Ingredientes</h2>
@@ -36,6 +36,11 @@
         <li>Acompañar el chivito con tomates frescos cortados en octavos y condimentar con : sal, pimienta, aceite de
             oliva, orégano y jugo de limón.</li>
     </ol>
+    <audio controls autoplay playinline>
+        <source src="./audio/Los Nocheros - La Yapa.mp3" type="audio/mp3">
+        <source src="./audio/la-yapa.mpeg" type="audio/mpeg">
+        El browser no permite la etiqueta de audio
+    </audio>
     <h2>Imagen de chivito a la estaca</h2>
     <img src="./img/chivito.jpg" width="560" alt="imagen chivito a la estaca">
     <h2>Video explicativo de asado</h2>
@@ -43,15 +48,12 @@
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
     <br>
+    <h2>Mapa de referencia</h2>
 
     <iframe
         src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d26084341.917257078!2d-81.63269824190759!3d-37.05453362430733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1smapa%20de%20lugar%20donde%20se%20cocina%20el%20chivito%20serrano!5e0!3m2!1ses-419!2sar!4v1666703080898!5m2!1ses-419!2sar"
         width="560" height="450" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <audio autoplay>
-        <source src="./audio/la-yapa.mpeg">
-    </audio>
-
 </body>
 
 </html>
